Fix: placeholder is 2 pixels out of alignment

--- a/src/main/resources/passworld/styles/styles.css
+++ b/src/main/resources/passworld/styles/styles.css
@@ -179,6 +179,7 @@
 /* Placeholder de la tabla */
 .table-view .placeholder {
     -fx-alignment: top-left;
+    -fx-padding: 0 0 0 3; /* Margen izquierdo de 3px */
 }
 
 
